# CPPBinLib

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/padt/cppbinlib/: AnsysRSTReader.h  CBinLib.h
src/: CMakeLists.txt
src/ansysResultFileReader/: AnsysRSTReader.cpp  CMakeLists.txt
src/cbinlib/: CBinLibShim.f90  CMakeLists.txt
test/: CMakeLists.txt
